# app-version-gui

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  commands.rs  database.rs  lib.rs  main.rs  models.rs  scheduler.rs
src-tauri/src/notification/: manager.rs  mod.rs
src-tauri/src/services/: cargo.rs  github.rs  homebrew.rs  local_version.rs  mod.rs  npm.rs  pypi.rs
src-tauri/src/version/: comparator.rs  mod.rs  parser.rs
src/components/layout/: Header.tsx
src/components/settings/: SettingsDialog.tsx
src/components/software/: AddSoftwareDialog.tsx  EditSoftwareDialog.tsx  SoftwareTable.tsx  VersionBadge.tsx
src/components/ui/: badge.tsx  dropdown-menu.tsx  select.tsx  tooltip.tsx
src/lib/: time.ts
src/stores/: settingsStore.ts  softwareStore.ts
src/types/: software.ts
